--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "devDependencies": {
     "dotenv": "^16.4.5",
-    "tailwindcss": "^3.4.1"
+    "dotenv-webpack": "^8.1.0",
+    "tailwindcss": "^3.4.1",
+    "webpack": "^5.92.1",
+    "webpack-cli": "^5.1.4"
   },
   "dependencies": {
     "chance": "^1.1.11",
